[workspace]
resolver = "3"
members = [
    "library",
    "examples/json_fibonacci",
    "examples/json_to_bencode",
    "examples/json_to_yaml",
    "examples/json_to_xml",
    "examples/json_pretty_print",
    "examples/json_strip_whitespace",
    "examples/json_create_at_runtime",
    "examples/json_to_toml",
    "examples/json_advanced_features",
    "examples/json_pointer_demo",
    "examples/json_node_builder",
    "examples/json_query_traverse",
    "examples/json_unicode_files",
    "examples/json_merge_patch",
    "examples/json_parser_config",
]
