[workspace]
resolver = "3"
members = [
    "library",
    "examples/json_fibonacci",
    "examples/json_to_bencode",
    "examples/json_to_yaml",
    "examples/json_to_xml",
    "examples/json_pretty_print",
    "examples/json_strip_whitespace",
    "examples/json_create_at_runtime",
    "examples/json_to_toml",
    "examples/json_advanced_features",
    "examples/json_pointer_demo",
    "examples/json_node_builder",
    "examples/json_query_traverse",
    "examples/json_unicode_files",
    "examples/json_merge_patch",
    "examples/json_parser_config",
    "examples/json_iot_sensor",
    "examples/json_benchmarks",
    "examples/embedded_test",
    "examples/json_validation_demo",
    "examples/json_api_demo",
    "examples/json_phase8_demo",
    "examples/json_phase9_demo",
    "examples/json_phase10_demo",
    "examples/json_phase11_demo",
]

[profile.release]
panic = "abort"
