[workspace]
resolver = "3"
members = [
    "library",
    "examples/json_fibonacci",
    "examples/json_to_bencode",
    "examples/json_to_yaml",
    "examples/json_to_xml",
    "examples/json_pretty_print",
    "examples/json_strip_whitespace",
    "examples/json_create_at_runtime",
    "examples/json_to_toml",
    "examples/json_advanced_features",
    "examples/json_pointer_demo",
    "examples/json_node_builder",
    "examples/json_query_traverse",
    "examples/json_unicode_files",
    "examples/json_merge_patch",
    "examples/json_parser_config",
    "examples/json_iot_sensor",
    "examples/json_benchmarks",
    "examples/embedded_test",
    "examples/json_validation_demo",
    "examples/json_api_demo",
    "examples/json_index_and_parse_demo",
    "examples/json_macro_and_nested_demo",
    "examples/json_pretty_and_safe_access_demo",
    "examples/json_perf_and_memory_demo",
    "examples/json_schema_patch_demo",
]

[profile.release]
panic = "abort"
